# Customer-Churn-Prediction

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  debug_mlflow.py  docker-compose.yml  pyproject.toml  requirements-prod.txt  view_runs.py
.github/workflows/: ci_cd.yml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: settings.py
infrastructure/: README.md  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
notebooks/: 01_eda.ipynb  02_modeling.ipynb
scripts/: predict.py
src/churn/api/: main.py  schemas.py
src/churn/data/: ingest.py  preprocess.py
src/churn/features/: engineer.py
src/churn/models/: evaluate.py  train.py
src/churn/utils/: logging.py
tests/integration/: test_api.py
tests/unit/: test_preprocess.py
