[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customer-churn-prediction"
version = "1.0.0"
description = "Customer Churn Prediction — Cell2Cell (Duke University) | XGBoost · FastAPI · MLflow · Docker · AWS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ML Engineer" }]

dependencies = [
    # ── Data ──────────────────────────────────────────────────
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "pyarrow>=16.0.0",          # fast parquet I/O

    # ── ML ────────────────────────────────────────────────────
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.3",
    "lightgbm>=4.3.0",
    "imbalanced-learn>=0.12.3",
    "optuna>=3.6.1",
    "catboost>=1.2.5",             # hyperparameter tuning

    # ── Experiment Tracking ───────────────────────────────────
    "mlflow>=2.13.0",

    # ── Feature Engineering ───────────────────────────────────
    "feature-engine>=1.7.0",
    "category-encoders>=2.6.3",

    # ── API ───────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.3.0",  # modern settings management

    # ── Observability ─────────────────────────────────────────
    "loguru>=0.7.2",
    "prometheus-fastapi-instrumentator>=7.0.0",

    # ── AWS ───────────────────────────────────────────────────
    "boto3>=1.34.110",

    # ── Utils ─────────────────────────────────────────────────
    "joblib>=1.4.2",
    "httpx>=0.27.0",
    "rich>=13.7.1",              # beautiful CLI output
    "typer>=0.12.3",             # CLI interface for scripts
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",             # async test client
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "plotly>=5.22.0",
]

[project.scripts]
churn-train  = "churn.models.train:app"
churn-serve  = "churn.api.main:serve"
churn-ingest = "churn.data.ingest:app"

# ── uv ────────────────────────────────────────────────────────
[dependency-groups]
dev = [
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "plotly>=5.22.0",
]

# ── Hatch (src layout) ────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/churn"]

# ── Ruff (replaces flake8 + isort + black) ────────────────────
[tool.ruff]
line-length    = 100
target-version = "py311"
src            = ["src"]

[tool.ruff.lint]
select = [
    "E", "F",   # pycodestyle + pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # bugbear
    "SIM",      # simplify
    "TCH",      # type-checking imports
    "ANN",      # annotations
]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["churn"]

[tool.ruff.format]
quote-style = "double"

# ── Mypy ──────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
plugins                = ["pydantic.mypy"]

# ── Pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths      = ["tests"]
asyncio_mode   = "auto"
addopts        = "-v --cov=src/churn --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/churn"]
omit   = ["*/tests/*", "*/__init__.py"]